CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(sdltest)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}")

SET(CMAKE_CXX_STANDARD 17)

INCLUDE(FindSDL2)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIR})

ADD_COMPILE_OPTIONS(-Wpedantic)

ADD_EXECUTABLE(sdltest
  main.cpp
)

TARGET_LINK_LIBRARIES(sdltest
  ${SDL2_LIBRARY}
  ${CMAKE_THREAD_LIBS_INIT}
)
